--- a/historia.html
+++ b/historia.html
@@ -41,7 +41,7 @@
 								<!-- Sidebar -->
 									<section id="sidebar">
 										<section>
-											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Gameplay</h3>
 											<p>Descubre todo acerca del frenético gameplay de School Nightmares</p>
 											<footer>
@@ -52,7 +52,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Artwork</h3>
 											<p>Descubre arte conceptual de los personajes, enemigos y escenarios de School Nightmares</p>
 											<footer>
@@ -63,7 +63,7 @@
 										</section>
 										<hr />
 										<section>
-											<a href="#" class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
+											<a class="image fit"><img src="images/puertatoori.jpg" alt="" /></a>
 											<h3>Campaña</h3>
 											<p>Descubre todo sobre School Nightmares, además de cómo apoyarnos a financiar el proyecto</p>
 											<footer>
