--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 									<p>(Música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<span class="icon"><img width=30% height=35% src="images/andres.jpg" alt="" /></span>
+									<img width=50% height=50% src="images/andres.jpg" alt="" />
 									<h3>Andrés Ruiz</h3>
 									<p>Guión y diseño de gameplay</p>
 									<p>(Historia del juego)</p>
