--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
 									<p>(Música)</p>
 								</section>
 								<section class="col-4 col-6-medium col-12-xsmall">
-									<img class="rounded-circle" width=200px height=200px src="images/andres.jpg" alt="" />
-									<h3>Andrés Ruiz</h3>
-									<p>Guión y diseño de gameplay</p>
-									<p>(Historia del juego)</p>
+									<img class="rounded-circle" width=500px height=500px src="images/andres.jpg" alt="" />
+									<h3 align=center>Andrés Ruiz</h3>
+									<p align=center>Guión y diseño de gameplay</p>
+									<p align=center>(Historia del juego)</p>
 								</section>
 							</div>
 						</div>
