--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<p></p>
 				<p></p>
 			<!-- Six -->
-				<section id="five" class="wrapper style2 special fade">
+				<section id="five" class="wrapper style2 special">
 					<div class="container">
 						<header>
 							<h2>Formulario</h2>
